force-app/main/default/objects/Bus__c/fields/Air_Conditioning__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air Conditioning</label>
    <type>Checkbox</type>
</CustomField>