force-app/main/default/objects/Bus__c/fields/Bus_ID__c.field-meta.xml
<CustomField>
    <fullName>Bus_ID__c</fullName>
    <displayFormat>B-{00000}</displayFormat>
    <label>Bus ID</label>
    <type>AutoNumber</type>
</CustomField>