force-app/main/default/objects/Bus__c/fields/Bus_Type__c.field-meta.xml
<CustomField>
    <fullName>Bus_Type__c</fullName>
    <label>Bus Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mini Bus</fullName>
            </value>
            <value>
                <fullName>Midi Bus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>