force-app/main/default/objects/Bus__c/fields/Insurance_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expire_Date__c</fullName>
    <label>Insurance Expire Date</label>
    <type>Date</type>
</CustomField>