force-app/main/default/objects/Bus__c/fields/Licence_Plate__c.field-meta.xml
<CustomField>
    <fullName>Licence_Plate__c</fullName>
    <label>Licence Plate</label>
    <length>154</length>
    <type>Text</type>
</CustomField>