force-app/main/default/objects/Bus__c/validationRules/Max_Capacity_for_Midi_Bus.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Capacity_for_Midi_Bus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Bus_Type__c, &quot;Midi Bus&quot;),
    Maximum_Capacity__c != 36 
)</errorConditionFormula>
    <errorDisplayField>Maximum_Capacity__c</errorDisplayField>
    <errorMessage>Maximum capacity should be 36 because you selected Bus Type as Midi Bus.</errorMessage>
</ValidationRule>