force-app/main/default/objects/Bus__c/validationRules/Max_Capacity_for_Mini_Bus.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Capacity_for_Mini_Bus</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Maximum_Capacity__c != 24,
					 ISPICKVAL(Bus_Type__c, &quot;Mini Bus&quot;)  
					)</errorConditionFormula>
    <errorDisplayField>Maximum_Capacity__c</errorDisplayField>
    <errorMessage>Maximum capacity should be 24 because you selected Bus Type as Mini Bus.</errorMessage>
</ValidationRule>